[gd_scene load_steps=9 format=2]

[ext_resource path="res://prefabs/buttons/remember_pw.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefabs/buttons/start.tscn" type="PackedScene" id=2]
[ext_resource path="res://original_assets/lobby/sprites/DefineSprite_505/1.png" type="Texture" id=3]
[ext_resource path="res://resources/fonts/72_DotMatrix.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/login_input_ui.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Theme" id=2]
LineEdit/colors/clear_button_color = Color( 0, 0, 0, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
LineEdit/colors/cursor_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0, 0, 0, 1 )
LineEdit/colors/selection_color = Color( 0, 0, 0, 1 )
LineEdit/constants/minimum_spaces = 0
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 3 )
LineEdit/styles/normal = SubResource( 1 )
LineEdit/styles/read_only = null

[node name="LoginInputUI" type="Node2D"]
script = ExtResource( 5 )

[node name="1" type="Sprite" parent="."]
position = Vector2( 48, 156 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
offset = Vector2( -96, -312 )

[node name="StartButton" parent="." instance=ExtResource( 2 )]
position = Vector2( -1, -50 )
scale = Vector2( 0.81, 0.899 )

[node name="PWButton" parent="." instance=ExtResource( 1 )]
position = Vector2( 266, 257 )
scale = Vector2( 0.507, 0.498 )

[node name="GuestInput" type="LineEdit" parent="."]
margin_left = -280.0
margin_top = -287.0
margin_right = 310.0
margin_bottom = -195.0
rect_pivot_offset = Vector2( -464, 92 )
theme = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
placeholder_text = "Guest Name"
placeholder_alpha = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameInput" type="LineEdit" parent="."]
margin_left = -280.0
margin_top = 106.0
margin_right = 310.0
margin_bottom = 198.0
rect_pivot_offset = Vector2( -464, 92 )
theme = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
placeholder_text = "Member Name"
placeholder_alpha = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordInput" type="LineEdit" parent="."]
margin_left = -284.0
margin_top = 208.0
margin_right = 228.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( -464, 92 )
theme = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
secret = true
placeholder_text = "Password"
placeholder_alpha = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="GuestInput" to="." method="_on_guest_click"]
